Refactor realtime API, add Parkour route
