# src/routes/realtime.ts
@@ -1,23 +1,28 @@
 // @ts-nocheck
 import { Router } from 'express';
-import { query } from '../modules/db';
 import { redisClient } from '../modules/redis';
+import WebSocketServer from 'ws';
 
-const tobj = {};
-const bobj = {};
-redisClient.subscribe("gametntrun", (message) => {
-    tobj = JSON.parse(message);
-});
-redisClient.subscribe("gamebridges", (message) => {
-    bobj = JSON.parse(message);
+const wss = new WebSocketServer.Server({ port:8081 });
+wss.on("connection", ws => {
+    ws.on("message", (message) => {
+        if (message.toString() === "bridges") {
+            ws.send("Subscribed to bridges!")
+            redisClient.subscribe("gamebridges", (msg) => {
+                ws.send(msg);
+            })
+        } else if (message.toString() === "tntrun") {
+            ws.send("Subscribed to TNTRUN!")
+            redisClient.subscribe("gametntrun", (msg) => {
+                ws.send(msg)
+            });
+        } else if (message.toString() === "parkour") {
+            ws.send("Subscribed to parkour!")
+            redisClient.subscribe("gameparkour", (msg) => {
+                ws.send(msg)
+            })
+        }
+    })
 })
 
 export const realtimeRouter = Router();
-
-realtimeRouter.get('/bridges/_realtime', async (req, res) => {
-    return res.status(200).json(bobj);
-})
-
-realtimeRouter.get('/tntrun/_realtime', async (req, res) => {
-    return res.status(200).json(tobj);
-})
